bluetooth: Check if device name is null before trying to convert

Since http://crrev.com/1828193002 ConvertJavaStringToUTF8 crashes
when passed in null. To avoid that we first check if the
name returned by android is null and if so return an empty string.

BUG=602189

Review URL: https://codereview.chromium.org/1876753004

Cr-Commit-Position: refs/heads/master@{#386733}

Former-commit-id: baefa2c7c7188832268e60b063103673edf8a34f